--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1914,6 +1914,7 @@ Creating Accounts...,Création des comptes...,
 Creating Company and Importing Chart of Accounts,Création de la société et import du plan comptable,
 Creating Dimensions...,Création des dimensions,
 Creating Payment Entries......,Créer des écritures de paiement...,
+Creating Purchase Order ...,Création de la commande fournisseur...,
 Creating Salary Slips...,Création des fiches de paie en cours...,
 Creating bank entries...,Création des écritures bancaires,
 Creating {0} Invoice,Création de {0} facture,
@@ -2127,6 +2128,7 @@ Date of establishment,Date de création,
 Date of the company's incorporation. For reference only or to be used in custom print formats.,Date d'enregistrement de la société. Pour information ou pour utiliser dans un format d'impression personnalisé.,
 Date on which this component is applied,Date à laquelle ce composant est appliqué,
 Date,Date,
+Dates {} and {} are not in the same fiscal year.,Les dates {} et {} ne font pas partie du même exercice fiscal.,
 Day Book Data exported from Tally that consists of all historic transactions,Grand livre exporté depuis Tally comprennant l'historique des transactions,
 Day Book Data,Données de journal,
 Day Of Week,Jour de la semaine,
@@ -2788,6 +2790,7 @@ Enable Deferred Expense,Activer les frais reportés,
 Enable Deferred Revenue,Activer les produits comptabilisés d'avance,
 Enable Distributed Cost Center,Activer la distribution du centre de coût,
 Enable Entry Grace Period,Autoriser un délai supplémentaire pour pour les enregistrement d'entrées,
+Enable European Access,Autoriser l'accès aux pays européens,
 Enable Exit Grace Period,Autoriser un délai supplémentaire pour pour les enregistrement de sortie,
 Enable Field Filters,Autoriser les filtres de champ,
 Enable Item Booking,Autoriser la réservation d'articles,
@@ -3330,6 +3333,7 @@ Get Items For Work Order,Obtenir des articles pour l'ordre de travail,
 Get Items From Purchase Receipts,Obtenir des Articles à partir des Reçus d'Achat,
 Get Items From,Obtenir les articles depuis,
 Get Items from BOM,Obtenir les Articles depuis nomenclature,
+Get Items from Material Requests against this Supplier,Obtenir les demandes de matériel pour ce fournisseur,
 Get Items from Open Material Requests,Obtenir des Articles de Demandes Matérielles Ouvertes,
 Get Items from Product Bundle,Obtenir les Articles du Produit Groupé,
 Get Items,Obtenir les articles,
@@ -3655,6 +3659,7 @@ If this is unchecked direct GL Entries will be created to book Deferred Revenue/
 "If you {0} {1} quantities of the item <b>{2}</b>, the scheme <b>{3}</b>
 			will be applied on the item.","Si vous {0} {1} quantités de l'article <b>{2}</b>, le schéma <b>{3}</b>
 			 sera appliqué sur l'article.",
+"If you {0} {1} quantities of the item {2}, the scheme {3} will be applied on the item.","Si vous {0} {1} quantités de l'article {2}, la règle {3} sera appliquée à l'article.",
 "If you {0} {1} worth item <b>{2}</b>, the scheme <b>{3}</b> will be applied on the item.
 				","Si vous {0} {1} d'article <b>{2}</b>, le schéma <b>{3}</b>
 			 sera appliqué sur l'article.",
@@ -4032,6 +4037,7 @@ Item Classification,Classification de l'Article,
 Item Code > Item Group > Brand,Code de l'article > Groupe d'articles > Marque,
 Item Code cannot be changed for Serial No.,Code de l'Article ne peut pas être modifié pour le Numéro de Série,
 Item Code required at Row No {0},Code de l'Article est requis à la Ligne No {0},
+"Item Code, warehouse, quantity are required on row {0}","Le code de l'article, l'entrepôt et la quantité sont obligatoire à la ligne {0}",
 "Item Code, warehouse, quantity are required on row","Le code d'article, l'entrepôt, la quantité sont requis à la ligne",
 Item Code: {0} is not available under warehouse {1}.,Code d'article: {0} n'est pas disponible dans l'entrepôt {1}.,
 Item Code,Code de l'article,
@@ -6599,6 +6605,8 @@ Record all transactions against an accounting journal,Comptabilisation toutes le
 Recording URL,URL de l'enregistrement,
 Recruitment Analytics,Analyse des recrutements,
 Recruitment,Recrutement,
+Recurrence End Field,Champ de fin de la récurrence,
+Recurrence Interval,Intervalle de récurrence,
 Recurrent,Recurrent,
 Red,Rouge,
 Redeem Against,Échanger contre,
@@ -6993,6 +7001,7 @@ Row #{}: Serial Nos. {} has already been transacted into another POS Invoice. Pl
 Row #{}: Serial No{}. {} has already been transacted into another POS Invoice. Please select valid serial no.,Ligne #{}: Numéro de série n°{}. {} a déjà été utilisé dans une autre facture de point de vente.,
 Row #{}: Stock quantity not enough for Item Code: {} under warehouse {}. Available quantity {}.,Ligne #{}: Quantité en stock insuffisante pour le code d'article {} dans l'entrepôt {}. La quantité disponible est de {}.,
 Row #{}: You cannot add postive quantities in a return invoice. Please remove item {} to complete the return.,Ligne #{}: vous ne pouvez pas ajouter de quantités positives dans un avoir. Veuillez supprimer l'article {} pour enregister l'avoir.,
+Row #{}: You must select {} serial numbers for item {}.,Ligne #{}: Vous devez sélectionner {} numéros de série pour l'article {},
 Row #{}: {} of {} should be {}. Please modify the account or select a different account.,Ligne #{}: {} sur {} devrait être {}. Veuillez modifier le compte ou sélectionner un compte différent.,
 Row #{}: {} {} does not exist.,Ligne #{}: {} {} n'existe pas.,
 Row #{}: {},Ligne #{}: {},
