fix: Booking credit conversion query

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1750,8 +1750,8 @@ Converted,Converti,
 Convertible Item,Article convertible,
 Convertible Items,Articles convertibles,
 Copied From,Copié depuis,
-Copy Fields to Variant,Copier les Champs dans une Variante,
-Copy From Item Group,Copier Depuis un Groupe d'articles,
+Copy Fields to Variant,Copier les champs dans une variante,
+Copy From Item Group,Copier depuis le groupe d'articles,
 Copy of Invitation/Announcement,Copie de l'invitation / annonce,
 Corrective Action,Action corrective,
 Corrective/Preventive,Corrective/Préventive,
